syntax = "proto3";

enum CardAttribute {
    AttrPower = 0;
    AttrSoul = 1;
    AttrState = 2;
}
